<resources>
    <string name="app_name">TrainingProject</string>
    <string name="hello_blank_fragment">Hello welcome</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phoneNumber">Enter phoneNumber</string>
    <string name="enter_email">Enter email</string>
    <string name="add">add</string>
    <string name="captureImage">CaptureImage</string>
    <string name="selectImage">SelectImage</string>
    <string name="retry">retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="overview">Overview</string>
    <string name="sale">Sale</string>
    <string name="about">About</string>
    <string name="offers">Offers</string>
    <string name="chat">Chatting</string>
    <string name="app_arabic_name" translatable="false">مشروع تدريب</string>
    <string name="app_english_name" translatable="false">TrainingProject</string>
    <string name="close" translatable="false">close</string>
    <string name="open" translatable="false">open</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="iv_person_description">iv_person_description</string>
    <string name="ali_moussa">Ali Moussa</string>
    <string name="_78848044">78848044</string>
    <string name="textview">TextView</string>
    <string name="permission_required">Permissions Required</string>
    <string name="denied_msg">You have forcefully denied some of the required permissions</string>
    <string name="open_settings">for this action. Please open settings, go to permissions and allow them.</string>
    <string name="ascending">ASC</string>
    <string name="scheme">package</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search">search</string>
    <string name="close_bottom_sheet">Close Bottom sheet</string>
    <string name="show_bottom_sheet">Show Bottom sheet</string>
    <string name="add_images">Add Images</string>
    <string name="john_doe">John Doe</string>
    <string name="sample_text">Sample Text</string>
    <string name="date">Date</string>
    <string name="notifications">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="pick_time">pick_time</string>
    <string name="pick_date">pick_date</string>
    <string name="start_date">Start Date...</string>
    <string name="end_date">End Date...</string>
    <string name="navigation">Navigation</string>
    <string name="authentication">Authentication</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">name</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_in">Already have an account? Login in</string>
</resources>