<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".create.CreateFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_view_pager"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@android:color/transparent"
            app:tabGravity="center"
            app:tabBackground="@drawable/viewpager_indicators"
            android:translationY="16dp"
            app:tabIndicatorHeight="0dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail" />



        <EditText
            android:id="@+id/editTextCarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:textColorHint="@color/blueberry"
            android:textStyle="bold"
            android:inputType="textNoSuggestions"
            app:layout_constraintBottom_toTopOf="@+id/buttonCapture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_phoneNumber"
            android:textColorHint="@color/blueberry"
            android:textStyle="bold"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/editTextCarName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:textColorHint="@color/blueberry"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/buttonCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captureImage"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectImage"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>